--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             <span class="data">father's name: muhammad asif</span><br />
             <span class="data">class: VIII</span><br />
             <span class="data">Teacher: musadique muslim</span><br />
-            <span class="data">Section incharge: Sultan ahmed</span><br />
-            <span class="data">Principal: mumtaz kareem</span><br />
+            <!-- <span class="data">Section incharge: Sultan ahmed</span><br />
+            <span class="data">Principal: mumtaz kareem</span><br /> -->
 
 
         </div>
     </section>
-     <section class="hero-2">
+     <section class="hero-2" id="objective">
         <div class="obj"><span>objective</span></div>
         <div class="object-text">
             <p>The purpose of this project is to enhance students’ understanding of linear equations by implementing a
@@ -63,7 +63,7 @@
                 system encourages analytical thinking and real-world application of mathematical concepts.</p>
         </div>
     </section>
-    <section class="table">
+    <section class="table" id="table-aray">
         <div class="table-head">table of <span id="a"></span></div>
         <div class="table-area">
             <div class="table-print" id="print"></div>
